<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_in_bg"
    tools:context=".RequestMoneyApprove">
    <ScrollView
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:scaleType="fitXY"
                android:src="@drawable/reg_header"/>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="-80dp"
                >
                <ImageView
                    android:id="@+id/GoBack"
                    android:src="@drawable/back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="0dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:text="@string/approve_money_request"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    />
                <ImageView
                    android:layout_width="40dp"
                    />
            </GridLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="550dp"
                android:background="@drawable/reg_small_scr"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="30dp"
                android:paddingBottom="10dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:paddingTop="85dp"
                    />
                <EditText
                    android:id="@+id/Amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/underlinebg"
                    android:hint="@string/amount_in_bdt"
                    android:inputType="number"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />
                <TextView
                    android:id="@+id/Note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/underlinebg"
                    android:text="@string/additional_note_comments"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:singleLine="false"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/BtnSend"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/approve_request"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:background="@drawable/button"
                    android:layout_marginBottom="10dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="-20dp"
                    android:paddingTop="20dp"
                    android:textAlignment="center"
                    >
                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="-30dp"
                        android:src="@drawable/user_profile_box"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="134dp"
                        android:layout_height="132dp"
                        android:src="@drawable/profile_image"
                        app:civ_border_color="@color/colorAccent"
                        app:civ_border_width="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="-187dp"
                        android:layout_marginLeft="-5dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:layout_marginTop="20dp"
                        android:paddingBottom="10dp"
                        >
                        <TextView
                            android:id="@+id/FullName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:layout_gravity="center"
                            android:textSize="25sp"
                            android:text="@string/al_amin_islam_nerob"
                            />
                        <GridLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/userid2"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                />
                            <TextView
                                android:id="@+id/SUserID"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:paddingLeft="10dp"
                                android:text="@string/_786786_or_01750690477"
                                />
                        </GridLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>