<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_in_bg"
    tools:context=".ResisterProcess">


    <ScrollView
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:scaleType="fitXY"
                android:src="@drawable/reg_header"/>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="-120dp"
                >
                <ImageView
                    android:id="@+id/GoBack"
                    android:src="@null"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    />

                <ImageView
                    android:layout_width="167dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo"
                    android:layout_row="0"
                    android:layout_column="1" />
                <ImageView
                    android:layout_width="40dp"
                    />
            </GridLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="460dp"
                android:background="@drawable/reg_small_scr"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:paddingTop="85dp"
                    />

                <EditText
                    android:id="@+id/fName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/underlinebg"
                    android:hint="@string/fname"
                    android:inputType="text"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />
                <EditText
                    android:id="@+id/lName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/underlinebg"
                    android:hint="@string/lname"
                    android:inputType="text"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />
                <EditText
                    android:id="@+id/Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/underlinebg"
                    android:hint="@string/Phone"
                    android:inputType="phone"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />
                <EditText
                    android:id="@+id/NID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/underlinebg"
                    android:hint="@string/NIDNO"
                    android:inputType="number"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    />
                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <CheckBox
                        android:id="@+id/Male"
                        android:text="Male"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        />
                    <CheckBox
                        android:id="@+id/Female"
                        android:text="Female"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        />
                </GridLayout>
                <EditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/underlinebg"
                    android:hint="@string/password"
                    android:inputType="textWebPassword"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />
                <Button
                    android:id="@+id/btnResister"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/signup"
                    />


            </LinearLayout>
            <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/GridLayout2"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                android:background="#99FFFFFF"
                android:columnCount="2"
                android:orientation="horizontal"
                android:padding="10dp"
                android:rowCount="2"
                tools:context=".GridXMLActivity">

                <TextView
                    android:text="@string/AlreadyHave"
                    android:textSize="18dp"
                    android:layout_marginTop="5dp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="70dp"
                    android:layout_marginTop="-10dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center"
                    android:background="@drawable/log_in_button"
                    android:text="@null" />
            </GridLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/tos"
                />
        </LinearLayout>

    </ScrollView>



</android.support.constraint.ConstraintLayout>