<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_in_bg"
    tools:context=".ResisterProcess">


    <ScrollView
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:scaleType="fitXY"
                android:src="@drawable/reg_header"/>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="-80dp"
                >
                <ImageView
                    android:id="@+id/GoBack"
                    android:src="@drawable/back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:text="@string/send_money"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    />
                <ImageView
                    android:layout_width="40dp"
                    />
            </GridLayout>
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:padding="25dp"
                >
                <EditText
                    android:id="@+id/UserID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/underlinebg"
                    android:hint="@string/UserIDorPhone"
                    android:inputType="number"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />
                <Button
                    android:id="@+id/BtnSearch"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/search_user"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:background="@drawable/button"
                    android:layout_marginBottom="10dp"
                    />
            </GridLayout>

        </LinearLayout>

    </ScrollView>



</android.support.constraint.ConstraintLayout>