<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_in_bg"
    tools:context=".WelcomeLogin">

    <ScrollView
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:clickable="true"
        android:focusableInTouchMode="true"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:focusableInTouchMode="true"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgBusiness"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/UserID"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/underlinebg"
                android:hint="@string/UserIDorPhone"
                android:inputType="number"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="#fff"/>

            <EditText
                android:id="@+id/Password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/underlinebg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="161dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:background="@drawable/log_in_button"
                android:text="@null"
                android:textColor="#000000" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnForgetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dip"
                android:background="@null"
                android:baselineAligned="false"
                android:text="@string/ForgetPassword"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="15dp" />

            <Button
                android:id="@+id/lw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dip"
                android:background="@null"
                android:text="@string/LoginWith"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="15dp" />

            <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/GridLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="2"
                android:orientation="horizontal"
                android:layout_gravity="center"
                tools:context=".GridXMLActivity" >


                <Button
                    android:id="@+id/fb"
                    android:layout_width="121dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/fb_sign_up"
                    android:text="@null"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/fb2"
                    android:layout_width="122dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/gmail_sign_up"
                    android:text="@null"
                    android:textColor="#000000" />



            </GridLayout>

            <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/GridLayout2"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="#99FFFFFF"
                android:columnCount="2"
                android:orientation="horizontal"
                android:padding="10dp"
                android:rowCount="2"
                tools:context=".GridXMLActivity">

                <TextView
                    android:text="@string/WantToMakeAn"
                    android:textSize="18dp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btnResister"
                    android:layout_width="96dp"
                    android:layout_marginTop="-10dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center"
                    android:background="@drawable/footer_sign_up_bottons"
                    android:text="@null" />
            </GridLayout>
            <TextView
                android:id="@+id/txt_push_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/txt_reg_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>